--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/gamoloy_icon.svg" type="image/svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Gamology</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/gamoloy_icon.svg" type="image/svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Gamology</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
