--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -7,7 +7,7 @@
 		<title>Gamology</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root" class="scroll-style"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
