--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div id="root"></div>
+	<div id="root" class='scroll-style'></div>
 	<script type="module" src="/src/main.jsx"></script>
 </body>
 
